src/objects/Influence_Registration_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>EVM_IR_Opportunity_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>It is used as a Place holder for Influence Registration/Opportunity ID of MSI SFDC.</description>
        <externalId>true</externalId>
        <label>EVM IR/Opportunity ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ISV_Registration__c</fullName>
        <label>Influence Registration</label>
        <referenceTo>Influence_Registration__c</referenceTo>
        <relationshipLabel>Influence Registrations/Opportunities</relationshipLabel>
        <relationshipName>ISV_Reg_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Influence_Registration_Opportunity_ID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Influence Registration/Opportunity ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Influence Registrations</relationshipLabel>
        <relationshipName>ISV_Reg_Opportunities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Influence Registrations</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ISV{00000}</displayFormat>
        <label>IR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Influence Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>